# HelixRT

./: .dockerignore  .gitignore  Dockerfile.monolith  README.md  docker-compose.yml  init-db.sql  package-lock.json  package.json  render.yaml  start-production.sh
apps/frontend/: Dockerfile  package.json  update_colors.py
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/app/about-us/: page.tsx
apps/frontend/app/blog/: page.tsx
apps/frontend/app/blog/[slug]/: page.tsx
apps/frontend/app/dashboard/: page.tsx
apps/frontend/app/docs/: page.tsx
apps/frontend/app/help-center/: page.tsx
apps/frontend/app/privacy-policy/: page.tsx
apps/frontend/app/refund-policy/: page.tsx
apps/frontend/app/terms-of-service/: page.tsx
apps/frontend/components/: theme-toggle.tsx
apps/frontend/components/ui/: animated-code.tsx  button.tsx  dropdown-menu.tsx  header-2.tsx  header-3.tsx  hero-04.tsx  logo.tsx  menu-toggle-icon.tsx  navigation-menu.tsx  use-scroll.ts
apps/gateway/: Dockerfile  package.json
apps/gateway/src/: index.js  runtimeClient.js
apps/runtime/: CMakeLists.txt  Dockerfile
apps/runtime/src/: main.cpp
apps/runtime/src/grpc/: runtime_server.cpp
apps/runtime/src/runtime/: runtime.cpp  runtime.hpp
